--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@
     </center>
    </div>
 
+   <div class="row">
+    <div class="col-lg-6 col-md-4 col-sm-12 px-5 py-5" style="display: flex; margin: 10px; padding: 20px;">
+      <img src="img/Screenshot (171).png" alt="" height="500px" width="600px"style="margin: 10px; padding: 20px;">
+      <img src="img/Screenshot (174).png" alt="" height="500px" width="600px"style="margin: 10px; padding: 20px;">
+    </div>
+   </div>
+
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
 
