--- a/index.html
+++ b/index.html
@@ -63,11 +63,14 @@
     </center>
    </div>
 
-   <div class="row">
-    <div class="col-lg-6 col-md-4 col-sm-12 px-5 py-5" style="display: flex; margin: 10px; padding: 20px;">
-      <img src="img/Screenshot (171).png" alt="" height="500px" width="600px"style="margin: 10px; padding: 20px;">
-      <img src="img/Screenshot (174).png" alt="" height="500px" width="600px"style="margin: 10px; padding: 20px;">
+   <div class="row  px-5 py-5 bg-primary mt-5">
+    <div class="col-md-6 col-sm-12 d-flex m-3">
+        <img src="img/Screenshot (171).png" alt="" class="w-100">
     </div>
+    <div class="col-md-6 col-sm-12 d-flex m-3">
+      <img src="img/Screenshot (174).png" alt="" class="w-100">
+  </div>
+
    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
